<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_background"
    android:elevation="4dp"
    android:orientation="vertical"
    android:padding="16dp"
    app:behavior_hideable="true"
    app:behavior_peekHeight="56dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.5">

    <View
        android:layout_width="80dp"
        android:layout_height="2dp"
        android:layout_gravity="center"
        android:background="@color/colorLightGrey" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="10dp"
        android:background="@color/colorLightGrey" />

    <TextView
        android:id="@+id/go_to_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:padding="8dp"
        android:text="@string/go_to_home"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:typeface="monospace" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/colorLightGrey" />

    <TextView
        android:id="@+id/see_saved_files"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:padding="8dp"
        android:text="@string/see_saved_files"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:typeface="monospace" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/colorLightGrey" />

    <TextView
        android:id="@+id/cancel_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:padding="8dp"
        android:text="@string/cancel"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:typeface="monospace" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/colorLightGrey" />

</LinearLayout>