<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.SearchAct">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/query_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/spinner_background"
                android:backgroundTint="#9AB2C4"
                android:ems="10"
                android:fontFamily="monospace"
                android:hint="@string/enter_your_query"
                android:padding="10dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@id/type_of_file"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/type_of_file"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:background="@drawable/spinner_background"
                android:backgroundTint="#9AB2C4"
                android:gravity="center"
                app:layout_constraintBottom_toTopOf="@id/find_your_file"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/query_name"
                app:layout_constraintVertical_bias="0.5" />

            <Button
                android:id="@+id/find_your_file"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="35dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="#6ECB55"
                android:fontFamily="monospace"
                android:padding="10dp"
                android:text="@string/find_your_file"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/type_of_file" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:fontFamily="monospace"
                android:gravity="center_horizontal"
                android:text="@string/text"
                android:textColor="#DB3A3A"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/find_your_file" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/downloadMedia"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_margin="10dp"
        android:backgroundTint="#6ECB55"
        android:text="@string/show_downloaded_media"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scrollView" />

</androidx.constraintlayout.widget.ConstraintLayout>